Map kit done, note is still on the process

--- a/OverTheHill/Info.plist
+++ b/OverTheHill/Info.plist
@@ -70,5 +70,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Use for your purposes</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Use for your purposes</string>
 </dict>
 </plist>
